--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "color-thief-browser": "^2.0.2",
     "jsmediatags": "^3.9.7",
+    "@tailwindcss/postcss": "^4.1.0",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
