--- a/app/package.json
+++ b/app/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@tailwindcss/postcss": "^4.1.0",
     "clsx": "^2.1.1",
     "color-thief-browser": "^2.0.2",
     "jsmediatags": "^3.9.7",
-    "@tailwindcss/postcss": "^4.1.0",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
